--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -20,5 +20,40 @@
             </ul>
         </div>
     </header>
+
+    <main>
+        <section>
+            <div>
+                <h1>Title</h1>
+                <p>3 WORDS</p>
+                <button>Button</button>
+            </div>
+            <div>
+                <h2>Title</h2>
+                <div>
+                    <div>
+                        <img src="image1.jpg" alt="image 1">
+                        <h3>Name1</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                    <div>
+                        <img src="image2.jpg" alt="image 2">
+                        <h3>Name2</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                    <div>
+                        <img src="image3.jpg" alt="image 3">
+                        <h3>Name3</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                    <div>
+                        <img src="image4.jpg" alt="image 4">
+                        <h3>Name4</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
