--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -54,6 +54,19 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div>
+                <img src="image5.jpg" alt="image 5">
+                <div>
+                    <blockquote>
+                        <p>QUOTE</p>
+                    </blockquote>
+                    <p>Author</p>
+                    <p>Sub-Title</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
