Creat Video section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -67,6 +67,92 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <h1>Title</h1>
+            <div>
+                <div>
+                    <img src="image6.jpg" alt="image 6">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="image6-1.jpg" alt="image 6-1">
+                        <h3>Title</h3>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                        </div>
+                        <p>Text</p>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="image7.jpg" alt="image 7">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="image7-1.jpg" alt="image 7-1">
+                        <h3>Title</h3>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                        </div>
+                        <p>Text</p>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="image8.jpg" alt="image 8">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="image8-1.jpg" alt="image 8-1">
+                        <h3>Title</h3>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                        </div>
+                        <p>Text</p>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="image9.jpg" alt="image 9">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="image9-1.jpg" alt="image 9-1">
+                        <h3>Title</h3>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                        </div>
+                        <p>Text</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 </body>
 </html>
