--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div>
             <a href="#">
@@ -20,8 +21,9 @@
             </ul>
         </div>
     </header>
-
+    <!-- main -->
     <main>
+        <!-- Banner -->
         <section>
             <div>
                 <h1>Title</h1>
@@ -54,7 +56,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Quote -->
         <section>
             <div>
                 <img src="image5.jpg" alt="image 5">
@@ -67,7 +69,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Videos -->
         <section>
             <h1>Title</h1>
             <div>
@@ -152,6 +154,32 @@
                 </div>
 
             </div>
+        <!-- Membership -->
+        </section>
+            <h1>TITLE</h1>
+            <div>
+                <div>
+                    <img src="image10.jpg" alt="image 10">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                </div>
+                <div>
+                    <img src="image11.jpg" alt="image 11">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                </div>
+                <div>
+                    <img src="image12.jpg" alt="image 12">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                </div>
+                <div>
+                    <img src="image13.jpg" alt="image 13">
+                    <h2>Title</h2>
+                    <p>TEXT</p>
+                </div>
+            </div>
+            <button>BUTTON</button>
         </section>
     </main>
 </body>
