Creat FAQ section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -181,6 +181,32 @@
             </div>
             <button>BUTTON</button>
         </section>
+        <!-- FAQ -->
+        <section>
+            <h1>TITLE</h1>
+            <div>
+                <div>
+                    <div>
+                        <h2>Title</h2>
+                        <p>TEXT</p>
+                    </div>
+                    <div>
+                        <h2>Title</h2>
+                        <p>TEXT</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Title</h2>
+                        <p>TEXT</p>
+                    </div>
+                    <div>
+                        <h2>Title</h2>
+                        <p>TEXT</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
