Creat footer section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -208,5 +208,27 @@
             </div>
         </section>
     </main>
+    <!-- Footer -->
+    <footer>
+        <div>
+            <div>
+                <div>
+                    <img src="image14.jpg" alt="image 14">
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="link1.png" alt="Link 1">
+                    </a>
+                    <a href="#">
+                        <img src="link2.png" alt="Link 2">
+                    </a>
+                    <a href="#">
+                        <img src="link2.png" alt="Link 3">
+                    </a>
+                </div>
+            </div>
+            <p>Text</p>
+        </div>
+    </footer>
 </body>
 </html>
