--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -154,8 +154,9 @@
                 </div>
 
             </div>
-        <!-- Membership -->
         </section>
+        <!-- Membership -->
+        <section>
             <h1>TITLE</h1>
             <div>
                 <div>
